# catalog_django

./: .env_example  README.md  pyproject.toml
blog_post/: admin.py  models.py  urls.py  views.py
blog_post/migrations/: 0001_initial.py
blog_post/templates/: base_blog.html  base_home.html
blog_post/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  home.html
blog_post/templates/includes/: inc_menu.html
blog_post/templatetags/: my_tags.py
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html
catalog/templates/catalog/: contacts.html
catalog/templates/forms/: forms.py
catalog/templates/includes/: inc_footer.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
